--- a/cauan/style.css
+++ b/cauan/style.css
@@ -1,7 +1,15 @@
 @charset "UTF-8";
+@font-face {
+    font-family: 'mario';
+    src: url('RetroMario-Regular.otf');
+}
 *{
     margin: 0px;
     padding: 0px;
+}
+h1,h2,h3{
+    font-family: 'mario';
+    letter-spacing: 3px;
 }
 html{
     font-family: Arial, Helvetica, sans-serif;
@@ -34,7 +42,7 @@ header h1:hover{
 h1{
     font-size: 7vw;
     color: white;
-    text-shadow: 0px 0px 10px black;
+    text-shadow: 0px 0px 4px black;
     text-align: center;
     padding-top: 100px;
 }
